--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Yiding Wang / Site Title"
+title                    : "Yiding Wang"
 title_separator          : "-"
 name                     : &name "Yiding Wang"
 description              : &description "personal description"
@@ -21,34 +21,34 @@ repository               : "Yiding00/Yiding00.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "me.png"
   name             : "Yiding Wang"
   pronouns         : # example: "she/her"  
-  bio              : "Happy everyday!"
+  bio              : "PhD student at Xi'an Jiaotong University"
   location         : "China"
-  employer         : "Xi'an Jiaotong University"
+  employer         : # URL
   uri              : # URL
-  email            : "ytcur1@stu.xjtu.edu.cn" 
+  email            : # URL
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # URL
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : # URL
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # URL
   researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "Yiding00"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
