--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,25 @@
 # main links links
 main:
+  # - title: "中文"
+  #   url: /chinese/
+
+  - title: "Biography"
+    url: /bio/
+
   # - title: "Publications"
   #   url: /publications/
 
   # - title: "Talks"
-  #   url: /talks/    
+  #   url: /talks/
 
   # - title: "Teaching"
-  #   url: /teaching/    
+  #   url: /teaching/
     
   # - title: "Portfolio"
   #   url: /portfolio/
         
   # - title: "Blog Posts"
   #   url: /year-archive/
-    
-  # - title: "CV"
-  #   url: /cv/
-    
+
   # - title: "Guide"
   #   url: /markdown/
