--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -288,7 +288,7 @@ zh: &DEFAULT_ZH
   more_label                 : "了解更多"
   related_label              : "你可能感兴趣的"
   follow_label               : "关注："
-  feed_label                 : "打赏"
+  feed_label                 : "feed"
   powered_by                 : "技术支持："
   website_label              : "网站"
   email_label                : "电子邮件"
